# rag-mcp-knowledge-platform

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  documents.py  knowledge.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/llm/: api_client.py  base.py  factory.py  mock_client.py  ollama_client.py
backend/app/mcp/: server.py
backend/app/rag/: chain.py  embeddings.py  loader.py  prompt.py  splitter.py  vector_store.py
data/samples/: ai_intern_job_requirements.txt  langchain_notes.md  mcp_notes.txt  openwebui_notes.md  platform_intro.md  rag_intro.txt
docs/: GitHub展示指南.md  接口文档.md  最终验收报告.md  简历投递版.md  简历描述.md  面试讲解稿.md  面试问答清单.md
docs/dev/: codex_project_spec.txt
mcp_server/: README.md  server.py  tools.py
scripts/: build_sample_kb.py  ingest_samples.py  init_db.py  test_api.py  test_mcp_tools.py
tests/: conftest.py  test_core_flow.py  test_embeddings.py  test_knowledge_api.py  test_mcp_tools.py  test_vector_store.py
