[project]
name = "rag-mcp-knowledge-platform"
version = "0.1.0"
description = "Mock-first RAG knowledge base platform with OpenAI-compatible API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.35.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0,<0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
